stop and listen, a bell is ringing